<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Deck</string>
    <string name="main_settings_menu_item_text">Settings</string>
    <string name="device_list_activity_title">Choose a Server</string>
    <string name="find_server_menu_item_text">Find Server</string>
    <string name="create_server_menu_item_text">Create Server</string>
    <string name="finish_connecting_menu_item_text">Finish Connecting</string>
    <string name="close_server_menu_item_text">Close Server</string>
    <string name="restart_connecting_menu_item_text">Restart Connecting</string>
    <string name="leave_server_menu_item_text">Leave Server</string>
    <string name="game_creator_activity_title">Game Creator</string>
    <string name="game_activity_title">Deck Game</string>
    <string name="game_settings_menu_item_text">Settings</string>
    <string name="new_card_menu_item_text">New Card</string>
    <string name="create_game_button_text">Create Game</string>
    <string name="join_game_button_text">Join Game</string>
    <string name="settings_button_text">Settings</string>
    <string name="title_activity_server_game">Server Game</string>
    <string name="action_settings">Settings</string>
    <string name="actionDealCardsText">Deal Cards</string>
    <string name="actionClearPlayerHandsText">Clear Player Hands</string>
    <string name="actionDealSingleCardText">Deal Single Card</string>
    <string name="actionSetDealerText">Set Dealer</string>
    <string name="actionShuffleCardsText">Shuffle Cards</string>
    <string name="subMenuConnectionText">Connection</string>
    <string name="subMenuGameText">Game</string>
    <string name="actionLayoutCardsText">Layout cards</string>
    <string name="actionSaveGameText">Save Game</string>
    <string name="actionOpenGameText">Open Game</string>
    <string name="actionDoneText">Done</string>
    <string name="actionToggleTableText">Toggle Table</string>
    <string name="drawerOpen">Drawer Open</string>
    <string name="drawerClosed">Drawer Closed</string>
    <string name="info_activity_title">Deck Info</string>

    <string name="adUnitId">ca-app-pub-2974409022548665/6085154570</string>
    <string name="iubendaPrivacyPolicyLink">https://www.iubenda.com/privacy-policy/546685</string>

</resources>
