<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/actionClearPlayerHands"
        android:title="@string/actionClearPlayerHandsText"
        android:showAsAction="never" />

    <item
        android:id="@+id/setDealer"
        android:title="@string/actionSetDealerText"
        android:showAsAction="never" />

    <item
        android:id="@+id/shuffleCards"
        android:title="@string/actionShuffleCardsText"
        android:showAsAction="never" />

    <item
        android:id="@+id/actionDealCards"
        android:title="@string/actionDealCardsText"
        android:showAsAction="never" />

    <item
        android:id="@+id/actionDealSingleCard"
        android:title="@string/actionDealSingleCardText"
        android:showAsAction="never" />

</menu>