<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/actionLayoutCards"
        android:title="@string/actionLayoutCardsText"
        app:showAsAction="never" />

    <item
        android:id="@+id/actionRequestCardFromPlayer"
        android:title="@string/actionRequestCardFromPlayerText"
        app:showAsAction="never" />

    <group
        android:id="@+id/dealerActions" >

        <item
            android:id="@+id/actionClearPlayerHands"
            android:title="@string/actionClearPlayerHandsText"
            app:showAsAction="never" />

        <item
            android:id="@+id/setDealer"
            android:title="@string/actionSetDealerText"
            app:showAsAction="never" />

        <item
            android:id="@+id/shuffleCards"
            android:title="@string/actionShuffleCardsText"
            app:showAsAction="never" />

        <item
            android:id="@+id/actionDealCards"
            android:title="@string/actionDealCardsText"
            app:showAsAction="never" />

        <item
            android:id="@+id/actionDealSingleCard"
            android:title="@string/actionDealSingleCardText"
            app:showAsAction="never" />

    </group>

</menu>